@@ -1,3 +1,10 @@
+2011-09-16  Donal K. Fellows  <dkf@users.sf.net>
+
+	* library/http/http.tcl (http::geturl): [Bug 3391977]: Ensure that the
+	-headers option overrides the -type option (important because -type
+	has a default that is not always appropriate, and the header must not
+	be duplicated).
+
 2011-09-13  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclUtil.c:	[Bug 3390638] Workaround broken solaris
